--- a/views/all-events.hbs
+++ b/views/all-events.hbs
@@ -43,8 +43,8 @@
       <h3>{{this.eventName}}</h3>
       <h4 class="events-title">{{this.type}}</h4>
       <h4>Date:</h4>
-      {{!-- <p>{{this.dateOfEvent}}</p> --}}
-      <p>May 03 2020 09:30</p>
+      <p>{{this.dateOfEvent}}</p>
+      {{!-- <p>May 03 2020 09:30</p> --}}
 
       {{!-- <h4>Diet:</h4> --}}
       <ul class="padding-ul">
