--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,11 +8,11 @@
         {{/if}}
         <div>
             <label for="email">Email</label>
-            <input id="email" type="email"  name="email" required value="albertledromadaire@gmail.com">
+            <input id="email" type="email"  name="email" required value="{{signUpInfo.email}}">
         </div>
         <div>
             <label for="password">Password</label>
-            <input id="password" type="password"required name="password" value="1234">
+            <input id="password" type="password"required name="password" value="{{password}}">
         </div>
         <button>Log in !</button>
         <p>Don't have an account yet ? </p>
